# FibonacciHeap

./: .gitignore  BUILD_AND_RUN.md  CHANGES_SUMMARY.md  CMakeLists.txt  FEATURES.md  FINAL_SUMMARY.md  GUI_SIMPLIFICATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TEST.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QT6_MIGRATION.md  QT_INTEGRATION_EXAMPLES.md  QT_VERIFICATION_SUMMARY.md  README.md  RUNNING_BOTH_GUIS.md  VERIFICATION_COMPLETE.md  VERIFY_QT_BUILD.md  advanced_example  demo_test  demo_test.cpp  test_enhanced_gui.sh  test_gui.sh  test_heap_operations  test_heap_operations.cpp  verify_guis.sh  verify_qt_build.sh
MyEmergencyTriage/: CMakeLists.txt  FibonacciHeap.hpp  FibonacciHeap.tpp  Main.qml  TaskManager.cpp  TriageBridge.cpp  TriageBridge.hpp  Vector.hpp  main.cpp
application/: AppWindow.cpp  AppWindow.h  TaskManager.cpp  TaskManager.h  main.cpp
examples/: advanced_example.cpp  advanced_test  basic_test  basic_test.cpp
include/: AnimationSystem.h  FH.hpp  FH.tpp  FibonacciHeap.h  FibonacciHeap.hpp  FibonacciHeap.tpp  HeapInterface.h  HeapWrapper.h  MainWindow.h  MainWindow.h.template  MainWindow.tpp.bak  TypeSelector.h  Vector.hpp
src/: AnimationSystem.cpp  MainWindow.cpp  MainWindow.cpp.bak  TypeSelector.cpp  main.cpp
